@@ -1,6 +1,7 @@
 package com.example.skilly.Config;
 
-import com.example.skilly.Services.CustomOAuth2UserService;
+import java.util.List;
+
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -13,8 +14,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
-import java.util.List;
+import com.example.skilly.Services.CustomOAuth2UserService;
 
 @Configuration
 @EnableWebSecurity
@@ -50,15 +50,13 @@ public class SecurityConfig {
         @Bean
         public CorsConfigurationSource corsConfigurationSource() {
                 CorsConfiguration configuration = new CorsConfiguration();
-                configuration.setAllowedOrigins(List.of("http://localhost:5173")); // Allow requests from this origin
-                configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS")); // Allow these HTTP
-                                                                                                     // methods
-                // configuration.setAllowedHeaders(List.of("*")); // Allow all headers
-                configuration.setAllowCredentials(true); // Allow credentials (e.g., cookies)
-                configuration.setAllowedHeaders(Arrays.asList("*"));
+                configuration.setAllowedOrigins(List.of("http://localhost:5173")); // Already correct
+                configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+                configuration.setAllowedHeaders(List.of("Authorization", "Content-Type", "X-Requested-With"));
+                configuration.setAllowCredentials(true);
 
                 UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-                source.registerCorsConfiguration("/**", configuration); // Apply this configuration to all paths
+                source.registerCorsConfiguration("/**", configuration);
                 return source;
         }
 
